# yeti

./: CMakeLists.txt  globals.cpp  globals.h  main.cpp
ast/: ast.cpp  ast.h
ast/BinOp/: ast.cpp
ast/Functions/: ast.cpp  ast.h
ast/Number/: ast.cpp
ast/Variables/: ast.cpp  ast.h
lexer/: tokens.l
parser/: parser.y
pre/lexer/: tokens.l
pre/parser/: parser.y
